# soil-resnet-model

./: .gitignore  LICENSE  METHODOLOGY.md  Makefile  README.md  RESULTS.md  pyproject.toml
archive/: README.md
archive/calibration/: national_local_calibration.py  national_local_calibration_calib_catboost.py  national_local_calibration_calib_catboost_by_year.py  national_local_calibration_calib_catboost_clipped.py  national_local_calibration_catboost_base.py  national_local_calibration_catboost_base_ph_cec.py  national_local_calibration_recompute.py  national_local_calibration_recompute_cb_cubist.py  train_rfe_catboost_local_calibration.py
archive/classical_ml/: alphaearth_models_top10cm.py  cubist_model_search_with400.py  esp_derived_vs_direct.py  esp_models_alphaearth_ansis_top10cm.py  merge_alphaearth_by_attribute.py  na_models_alphaearth_top10cm.py  na_models_alphaearth_top10cm_physics.py  ph_model_search.py  svr_alphaearth_top10cm.py  (+5 more)
configs/: baselines.yaml  resnet.yaml  resnet_fused.yaml
docs/: README.md  honours_full_report.md  project_report.md
gee/: README.md  resnet_colab.py  sample_embeddings.py
notebooks/: 01_data_exploration.ipynb  02_model_comparison.ipynb  03_resnet_training.ipynb  bare_earth_spectralgpt_gpu.ipynb  colab_step1_bareearth_sgpt_fusion.ipynb  colab_step2_resnet_train_from_fused.ipynb  full_soil_pipeline_colab.ipynb  full_soil_pipeline_colab_stable.ipynb
scripts/: ablate_bare_earth_gain.py  build_fused_features.py  download_bare_earth.py  evaluate_models.py  generate_report.py  predict_farm.py  pull_bare_earth_embeddings.py  run_data_extraction.py  run_gee_sampling.py  train_baselines.py  train_resnet_ensemble.py
src/: __init__.py
tests/: conftest.py  test_bare_earth_sampling.py  test_baseline_training.py  test_data_cleaner.py  test_ensemble_feature_resolution.py  test_feature_fusion.py  test_inference.py  test_losses_extended.py  test_management_adjustment.py  test_model_architecture.py  test_spectral_gpt.py  test_spectral_gpt_official_backend.py  test_training_pipeline.py
(+204 files in other folders)
